# pixi-faiss-examples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml
.github/workflows/: build.yml  check.yml
faiss-cpu/: README.md  pixi.toml
faiss-gpu-build/: README.md  pixi.toml
faiss-gpu-pyproject/: README.md  pyproject.toml
faiss-gpu-pyproject/tests/: test_faiss_gpu.py
