[project]
authors = [{ name = "yourname", email = "your@gmail.address" }]
dependencies = []
description = "Add a short description here"
name = "faiss-gpu-pyproject"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.system-requirements]
cuda = "12.4.0"

[tool.pixi.project]
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
faiss_gpu_pyproject = { path = ".", editable = true } # construct your reearch code here

[tool.pixi.dependencies]
cuda = ">=12.4.0,<13"
python = "3.11.*"
faiss-gpu = ">=1.9.0,<2"

[tool.pixi.tasks]

[tool.pixi.feature.test.tasks]
import = "python -c 'import faiss;print(faiss.get_num_gpus())'"
test = "pytest -v tests/test_faiss_gpu.py"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.environments]
test = { features = ["test"] }
